[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://sprites/mous_sprite_sheet.png" type="Texture" id=2]
[ext_resource path="res://audio/cheese.smp" type="Sample" id=3]
[ext_resource path="res://audio/dead.smp" type="Sample" id=4]
[ext_resource path="res://audio/hole.smp" type="Sample" id=5]
[ext_resource path="res://audio/jump.smp" type="Sample" id=6]
[ext_resource path="res://audio/steps.smp" type="Sample" id=7]

[sub_resource type="CapsuleShape2D" id=17]

custom_solver_bias = 0.0
radius = 46.9334
height = 165.233

[sub_resource type="SampleLibrary" id=16]

samples/cheese = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}
samples/dead_1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/hole_1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/jump_1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/steps = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}

[sub_resource type="Animation" id=14]

resource/name = "new_jump"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("player_body/player_sprite:region_rect")
tracks/0/interp = 0
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 305, 7, 247, 187 ), Rect2( 15, 357, 289, 140 ), Rect2( 317, 197, 248, 180 ) ]
}

[sub_resource type="Animation" id=12]

resource/name = "new_walk"
length = 1.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("player_body/player_sprite:region_rect")
tracks/0/interp = 0
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 10, 374, 292, 120 ), Rect2( 8, 25, 288, 138 ), Rect2( 31, 190, 257, 151 ) ]
}

[node name="player" type="Node2D"]

script/script = ExtResource( 1 )

[node name="player_body" type="RigidBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 17 )
shapes/0/transform = Matrix32( -1.31134e-08, -0.3, 0.3, -1.31134e-08, 11.1768, 4.06188 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 15.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 4
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="player_collider" type="CollisionShape2D" parent="player_body"]

transform/pos = Vector2( 11.1768, 4.06188 )
transform/rot = 90.0
transform/scale = Vector2( 0.3, 0.3 )
shape = SubResource( 17 )
trigger = false
_update_shape_index = 0

[node name="player_sprite" type="Sprite" parent="player_body"]

transform/pos = Vector2( 2, -1.19209e-07 )
transform/scale = Vector2( 0.336376, 0.336376 )
z/z = 1
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 10, 374, 292, 120 )

[node name="mouse_player_steps" type="SamplePlayer" parent="player_body"]

config/polyphony = 1
config/samples = SubResource( 16 )
default/volume_db = -8.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 0.3
default/filter/gain = 0.99
default/reverb_room = 1
default/reverb_send = 0.1
default/chorus_send = 0.15

[node name="mouse_player" type="SamplePlayer" parent="player_body"]

config/polyphony = 1
config/samples = SubResource( 16 )
default/volume_db = -8.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 0.3
default/filter/gain = 0.99
default/reverb_room = 1
default/reverb_send = 0.1
default/chorus_send = 0.15

[node name="mouse_animator" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/new_jump = SubResource( 14 )
anims/new_walk = SubResource( 12 )
playback/active = true
playback/speed = 4.0
blend_times = [  ]
autoplay = "new_walk"

[node name="dead_fade" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="body_enter" from="player_body" to="." method="_on_player_body_body_enter"]

[connection signal="timeout" from="dead_fade" to="." method="_on_dead_fade_timeout"]


